# FileManager

./: BUILD.bazel  README.md  WORKSPACE  build.gradle.kts  settings.gradle.kts
.github/: gradle-build.yml
.github/workflows/: build-gradle.yaml
app/: build.gradle.kts
app/src/androidTest/java/com/flamyoad/filemanager/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/flamyoad/filemanager/: MainActivity.kt  MyApplication.kt  MyFileProvider.kt
app/src/test/java/com/flamyoad/filemanager/: ExampleUnitTest.kt
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: AndroidBaseConventionPlugin.kt  AndroidCompose.kt  AndroidLibraryComposeConventionPlugin.kt  AppConfigs.kt  BuildDependencies.kt  CoreDependencies.kt  Libs.kt  Plugins.kt  ProjectModules.kt
common/: build.gradle.kts
common-ui/: build.gradle.kts
common-ui/src/androidTest/java/com/flamyoad/common_ui/: ExampleInstrumentedTest.kt
common-ui/src/main/java/com/flamyoad/common_ui/: BaseViewModel.kt  LoadingScreen.kt
common-ui/src/test/java/com/flamyoad/common_ui/: ExampleUnitTest.kt
common/src/main/java/: UiState.kt
explorer/: build.gradle.kts
explorer-impl/: build.gradle.kts
file-scanner/: build.gradle.kts
file-scanner-impl/: build.gradle.kts
gallery-kit/: build.gradle.kts
gallery-kit-impl/: build.gradle.kts
gallery-kit-impl/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
music-player-kit/: build.gradle.kts
music-player-kit-impl/: build.gradle.kts
test-shared/: build.gradle.kts
(+66 files in other folders)
